# twin_agent-ai

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  dockerignore  env.example  gitignore  pyproject.toml  requirements.txt
configs/: anomaly_config.yaml  local_demo_config.yaml  machine_config.yaml  rag_config.yaml
docs/: DEMO_COMMANDS.md  GITHUB_RELEASE_CHECKLIST.md  ai_copilot.md  anomaly_detection.md  api.md  api_docker_integration.md  architecture.md  completion_checklist.md  copilot_modes.md  cv_notes.md  dashboard.md  diagnosis_reconciliation.md  docker.md  evaluation.md  fleet_dashboard.md  fleet_demo.md  fleet_triage.md  fleet_wide_dashboard_consistency.md  global_copilot_ui_more_incidents.md  global_fleet_copilot.md  maintenance_work_orders.md  ml_explainability.md  ml_fault_diagnosis.md  ml_incident_diagnosis.md  mqtt_streaming.md  natural_copilot_questions.md  pipeline_orchestrator.md  rag_agent.md  rich_local_demo.md  runbook.md  screenshot_checklist.md  simulation.md  storage.md
knowledge_base/: bearing_failure_notes.md  conveyor_maintenance_guide.md  fault_code_reference.md  maintenance_log_q1.md  motor_manual.md  safety_checklist.md  sensor_specs.md
models/: fault_classifier.joblib  fault_classifier_error_analysis.json  fault_classifier_feature_importance.csv  fault_classifier_metrics.json  fault_classifier_model_card.md  fault_classifier_report.md
scripts/: bootstrap_demo_data.py  check_copilot_mode.py  enrich_incidents_with_ml.py  evaluate_detectors.py  explain_fault_classifier.py  export_fleet_triage.py  (+16 more)
(+124 files in other folders)
