[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twinagent-ai"
version = "0.1.0"
description = "Agentic AI copilot prototype for industrial digital twins."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Kishore" }
]
license = { text = "MIT" }
keywords = [
  "agentic-ai",
  "digital-twin",
  "industrial-ai",
  "predictive-maintenance",
  "rag",
  "time-series",
  "anomaly-detection"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
